[DUOS-2156][risk=no] Update Sentry Logging (#1782)
* centralize sentry logging